<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.SignUpActivity">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <FrameLayout
            android:id="@+id/fl_header_image"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_150sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="Image"
                android:scaleType="centerCrop"
                android:src="@drawable/sign_up_img" />

        </FrameLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            android:layout_below="@id/fl_header_image"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="-30dp"
            android:background="@drawable/card_view_resgiter_bg">


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tv_title_register"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/create_an_account"
                    android:textSize="@dimen/_16ssp"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:layout_marginStart="@dimen/_15sdp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Name"
                    android:textSize="@dimen/_12ssp"
                    android:textColor="#4C4C4C"
                    app:hintEnabled="false"
                    android:textStyle="bold"
                    android:layout_marginBottom="@dimen/_2sdp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.06"
                    app:layout_constraintBottom_toTopOf="@id/til_name"/>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_name"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:boxStrokeColor="@color/colorPrimary"
                    app:hintTextColor="@color/colorPrimary"
                    android:layout_marginStart="@dimen/_16sdp"
                    android:layout_marginTop="@dimen/_36sdp"
                    android:layout_marginEnd="@dimen/_16sdp"
                    android:hint="@string/hint_first_name"
                    app:hintEnabled="false"
                    android:textColorHint="@color/colorSecondaryText"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_title_register">


                    <com.blissvine.swach.utils.HHEditText
                        android:id="@+id/et_register_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:padding="@dimen/_11sdp"
                        android:hint="@string/et_hint_password"
                        android:textColor="@color/colorPrimaryText"
                        android:textSize="@dimen/_14ssp"
                        tools:text="abc@gmail.com"/>

                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_2sdp"
                    android:text="Email Address"
                    android:textColor="#4C4C4C"
                    android:textSize="@dimen/_12ssp"

                    android:textStyle="bold"
                    app:hintEnabled="false"
                    app:layout_constraintBottom_toTopOf="@id/til_login_email"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.07"
                    app:layout_constraintStart_toStartOf="parent" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_login_email"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:boxStrokeColor="@color/colorPrimary"
                    app:hintTextColor="@color/colorPrimary"
                    android:layout_marginStart="@dimen/_16sdp"
                    android:layout_marginTop="@dimen/_36sdp"
                    android:layout_marginEnd="@dimen/_16sdp"
                    android:hint="@string/et_hint_email_id"
                    app:hintEnabled="false"
                    android:textColorHint="@color/colorSecondaryText"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/til_name"
                    >


                    <com.blissvine.swach.utils.HHEditText
                        android:id="@+id/et_register_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress"
                        android:padding="@dimen/_11sdp"
                        android:hint="@string/et_hint_email_id"
                        android:textColor="@color/colorPrimaryText"
                        android:textSize="@dimen/_14ssp"
                        tools:text="abc@gmail.com"/>

                </com.google.android.material.textfield.TextInputLayout>


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Password"
                    android:textSize="@dimen/_12ssp"
                    android:textColor="#4C4C4C"
                    app:hintEnabled="false"
                    android:textStyle="bold"
                    android:layout_marginBottom="@dimen/_2sdp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.07"
                    app:layout_constraintBottom_toTopOf="@id/til_login_password"/>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_login_password"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:boxStrokeColor="@color/colorPrimary"
                    app:hintTextColor="@color/colorPrimary"
                    android:layout_marginStart="@dimen/_16sdp"
                    android:layout_marginTop="@dimen/_36sdp"
                    android:layout_marginEnd="@dimen/_16sdp"
                    android:hint="@string/et_hint_email_id"
                    app:hintEnabled="false"
                    android:textColorHint="@color/colorSecondaryText"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/til_login_email">


                    <com.blissvine.swach.utils.HHEditText
                        android:id="@+id/et_register_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress"
                        android:padding="@dimen/_11sdp"
                        android:hint="@string/et_hint_password"
                        android:textColor="@color/colorPrimaryText"
                        android:textSize="@dimen/_14ssp"
                        tools:text="abc@gmail.com"/>

                </com.google.android.material.textfield.TextInputLayout>

                <LinearLayout
                    android:id="@+id/ll_terms_and_conditions"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:orientation="horizontal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/til_login_password">

                    <androidx.appcompat.widget.AppCompatCheckBox
                        android:id="@+id/cb_terms_and_condition"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="false" />

                   <com.blissvine.swach.utils.HHTextView
                        android:id="@+id/tv_terms_and_condition"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_1sdp"
                        android:text="@string/i_agree_to_the_terms_and_conditions"
                        android:textColor="@color/colorSecondaryText"
                        android:textSize="@dimen/_12ssp" />

                </LinearLayout>

                <com.blissvine.swach.utils.HHButton
                    android:id="@+id/btn_register"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_15sdp"
                    android:layout_marginEnd="@dimen/_15sdp"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:background="@drawable/button_background"
                    android:foreground="?attr/selectableItemBackground"
                    android:gravity="center"
                    android:paddingTop="@dimen/_10sdp"
                    android:paddingBottom="@dimen/_10sdp"
                    android:text="@string/btn_lbl_register"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_16ssp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/ll_terms_and_conditions" />

                <RelativeLayout
                    android:id="@+id/Rl_orLoginWith"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/btn_register"
                    android:layout_margin="@dimen/_10sdp">

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0.5dp"
                        android:layout_centerInParent="true"
                        android:layout_marginStart="@dimen/_10sdp"
                        android:layout_marginEnd="@dimen/_10sdp"
                        android:layout_toStartOf="@id/tv_orLoginWith"
                        android:background="@color/colorSecondaryText" />

                    <TextView
                        android:id="@+id/tv_orLoginWith"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Or Sign Up With"
                        android:layout_centerHorizontal="true"
                        android:gravity="center" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0.5dp"
                        android:layout_marginStart="@dimen/_10sdp"
                        android:layout_marginEnd="@dimen/_10sdp"
                        android:background="@color/colorSecondaryText"
                        android:layout_centerInParent="true"
                        android:layout_toEndOf="@id/tv_orLoginWith"/>

                </RelativeLayout>

                <LinearLayout
                    android:id="@+id/ll_facebook_google"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="@dimen/_8sdp"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:layout_marginStart="@dimen/_10sdp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/Rl_orLoginWith">



                    <LinearLayout
                        android:id="@+id/ll_google_regsiter"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="@dimen/_36sdp"
                        android:layout_marginEnd="@dimen/_5sdp"
                        android:layout_gravity="center"
                        android:foreground="?attr/selectableItemBackgroundBorderless"
                        android:background="@drawable/facebook_google_button_bg"
                        android:gravity="center"
                        android:orientation="horizontal"
                        app:layout_constraintEnd_toStartOf="@id/ll_facebook"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/Rl_orLoginWith">

                        <ImageView
                            android:layout_width="@dimen/_15sdp"
                            android:layout_height="@dimen/_15sdp"
                            android:layout_gravity="center"
                            android:src="@drawable/google_color_svgrepo_com" />

                        <com.blissvine.swach.utils.HHTextViewBold
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginStart="@dimen/_3sdp"
                            android:gravity="center"
                            android:textSize="@dimen/_11ssp"
                            android:text="Google" />


                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/ll_facebook"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="@dimen/_36sdp"
                        android:foreground="?attr/selectableItemBackgroundBorderless"
                        android:layout_marginStart="@dimen/_5sdp"
                        android:layout_gravity="center"
                        android:background="@drawable/facebook_google_button_bg"
                        android:gravity="center"
                        android:orientation="horizontal"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/ll_google_regsiter"
                        app:layout_constraintTop_toBottomOf="@+id/Rl_orLoginWith">

                        <ImageView
                            android:layout_width="@dimen/_16sdp"
                            android:layout_height="@dimen/_16sdp"
                            android:layout_gravity="center"
                            android:src="@drawable/facebook_svgrepo_com"
                            android:contentDescription="@string/content_description" />

                        <com.blissvine.swach.utils.HHTextViewBold
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginStart="@dimen/_3sdp"
                            android:gravity="center"
                            android:textSize="@dimen/_11ssp"
                            android:text="Facebook" />

                    </LinearLayout>

                </LinearLayout>

                <com.blissvine.swach.utils.HHTextView
                    android:id="@+id/tv_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_16sdp"
                    android:layout_marginBottom="@dimen/_10sdp"
                    android:text="@string/already_have_an_account"
                    android:textSize="@dimen/_13ssp"
                    app:layout_constraintVertical_bias="0.8"
                    app:layout_constraintBottom_toBottomOf="parent"

                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/ll_facebook_google" />






            </androidx.constraintlayout.widget.ConstraintLayout>


        </ScrollView>

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>